--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <ul>
       <li><p>Ver documento: 1_funcion.js</p></li>
       <li><p>Ver documento: 2_arrow.js</p></li>
-      <li><a href="./pintar.html">pintar</a></li>
-      <li><a href="./4_colores.html">4_colores</a></li>
-      <li><a href="./keydown.html">keydown</a></li>
+      <li><a href="./pintar.html" target="_blank">pintar</a></li>
+      <li><a href="./4_colores.html" target="_blank">4_colores</a></li>
+      <li><a href="./keydown.html" target="_blank">keydown</a></li>
     </ul>
   </body>
 </html>
