Actualización de indicaciones

--- a/4_colores.html
+++ b/4_colores.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <p>Haz click en cada cuadro y verás que cambia al color negro.</p>
     <div
       id="contenedor-1"
       style="width: 200px; height: 200px; background-color: blue"
