--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Desafío 3 Funciones.</h1>
+    <p>Ejercicios:</p>
     <ul>
       <li><p>Ver documento: 1_funcion.js</p></li>
       <li><p>Ver documento: 2_arrow.js</p></li>
