--- a/keydown.html
+++ b/keydown.html
@@ -6,6 +6,14 @@
     <title>Document</title>
   </head>
   <body>
+    <ul>
+      <li>Presiona la tecla 'a' para el color: rosado.</li>
+      <li>Presiona la tecla 's' para el color: naranja.</li>
+      <li>Presiona la tecla 'd' para el color: celeste.</li>
+      <li>Presiona la tecla 'q' y se crea un cuadro de color: morado.</li>
+      <li>Presiona la tecla 'w' y se crea un cuadro de color: gris.</li>
+      <li>Presiona la tecla 'e' y se crea un cuadro de color: café.</li>
+    </ul>
     <div
       id="key"
       style="
