--- a/pintar.html
+++ b/pintar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <p>Haz click en 'hello' y podras ver el fondo color amarillo.</p>
+  <p>Haz click en el 'hello' de abajo y podras ver el fondo color amarillo.</p>
   <body>
     <div id="ele1">hello</div>
     <script src="./assets/js/script.js"></script>
