Actualización en títulos de páginas

--- a/pintar.html
+++ b/pintar.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>pintar</title>
   </head>
   <p>Haz click en el 'hello' de abajo y podras ver el fondo color amarillo.</p>
   <body>
